# socket_timings

./: .gitignore  Doxyfile  LICENSE  azure-pipelines.yml
dev/: README.md  full_build.sh  mac_build.sh  rebuild.sh
doc/: index.md
docs/: Doxyfile
docs/doxygen_source/: mainpage.dox
docs/html/: dir_7514020430e4347d202183cb203fbccb.html  dir_ff7959ef98f9f56ea91774abdaed7dd5.html  driver_8c.html  files.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  main_8c.html  mainpage_8dox.html  mpi_8h.html  mpi_8h_source.html  mpi__driver_8c.html  mpi__driver__f90_8f90.html  mpi__production_8c.html  mpi__production__f90_8f90.html  production_8c.html  zmq__client_8c.html  zmq__server_8c.html
docs/html/search/: all_6d.js  all_70.js  all_7a.js  defines_6d.js  files_6d.js  functions_6d.js  search.js  typedefs_6d.js
docs/latex/: dir_7514020430e4347d202183cb203fbccb.tex  dir_ff7959ef98f9f56ea91774abdaed7dd5.tex  driver_8c.tex  files.tex  index.tex  main_8c.tex  mainpage_8dox.tex  mpi_8h.tex  mpi__driver_8c.tex  mpi__driver__f90_8f90.tex  mpi__production_8c.tex  mpi__production__f90_8f90.tex  production_8c.tex  refman.tex  zmq__client_8c.tex  zmq__server_8c.tex
lib/: .gitignore
lib/mdi/MDI_Library/: mdi_general.c  mdi_tcp.c
socket_timings/: CMakeLists.txt  driver.c  driver.py  main.c  mpi_driver.c  mpi_driver_f90.f90  mpi_production.c  mpi_production_f90.f90  production.c  production.py  zmq_client.c  zmq_server.c
tests/fortran_mpi/: run.sh
tests/mdi/: run.sh
tests/mdi_mpi/: run.sh
tests/mpi/: run.sh
tests/pure_mpi/: run.sh
tests/python_mpi/: run.sh
tests/python_tcp/: run.sh
tests/tcp/: run.sh  windows_test.sh
tests/zmq/: run.sh
